--- a/ExamenEdTarea/nbproject/project.properties
+++ b/ExamenEdTarea/nbproject/project.properties
@@ -73,7 +73,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ExamenEdTarea
-main.class=examenedtarea.ExamenEdTarea
+main.class=examenedtarea.Empresa
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
